Sat May 14 07:44:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c: fix problem on *BSD

Wed May 11 21:52:10 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/unittests/const_params.c:
	- fix portability problems

Wed May 11 14:01:29 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: update
	* include/tds.h src/odbc/native.c src/odbc/prepare_query.c:
	* src/odbc/unittests/const_params.c src/tds/tds_checks.c:
	- support empty parameters in odbc rpc

Wed May 11 10:54:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- cleanup and minor fixes
	* src/odbc/native.c:
	- better support for numeric constants
	* src/odbc/unittests/const_params.c:
	- do more developing stuff
	* src/tds/read.c:
	- add support for VOID type

Wed May 11 09:52:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_param.c:
	* src/ctlib/unittests/rpc_ct_setparam.c:
	* src/dblib/unittests/t0005.c:
	* src/dblib/unittests/t0014.c:
	* src/dblib/unittests/t0022.c:
	* src/odbc/unittests/const_params.c:
	- more cleanup of tables and procs in tests

Tue May 10 14:54:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c src/odbc/odbc_checks.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c:
	* src/odbc/prepare_query.h src/odbc/unittests/const_params.c:
	- initial support for constant parameters in rpc calls

Fri May  6 14:21:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsthread.h(added) include/Makefile.am src/dblib/dblib.c:
	* src/tds/util.c:
	- merge partially Liam Widdowson patch on thread safety

Fri May  6 10:38:31 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c src/dblib/dblib.c include/tds.h:
	- add "query timeout" configuration
	- remove timeout member from TDSCONNECTION
	* src/odbc/unittests/timeout.c:
	- report error with correct statement
