@@ -1,3 +1,6 @@
+Sat May 14 08:30:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/unittests/t0008.c: fix test
+
 Sat May 14 07:44:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/net.c: fix problem on *BSD
 
